# pasticciotto

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  IMPLEMENTATION.md  Makefile  README.md
assembler/: assembler.py
emulator/: CMakeLists.txt  emulator.cpp
polictf/: CMakeLists.txt  README.MD  create_files.sh
polictf/asms/: README.MD  decrypt.pstc  encrypt.pstc
polictf/client/: CMakeLists.txt  pasticciotto_client.cpp
polictf/res/: banner.txt  client_opcode_key.txt  decrypteddatasection.txt  encrypteddatasection  flag.txt
polictf/server/: CMakeLists.txt  exploit-test.py  pasticciotto_server.cpp
polictf/tea_cversion/: tea-decrypt.c  tea-encrypt.c
tests/: CMakeLists.txt  test_main.cpp
tests/vm/: CMakeLists.txt  test_vm.cpp
tests/vmas/: CMakeLists.txt  test_vmas.cpp
vm/: CMakeLists.txt  debug.h  instruction.h  opcodes.h  vm.cpp  vm.h  vmas.cpp  vmas.h
